[package]
name = "proyecto_bd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["macros"] }
dhat = { version = "0.3.2", optional = true }
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[profile.rdbg]
inherits = "release"
debug = 1

[features]
dhat = ["dep:dhat"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false
