[workspace]
members = [
  "clean"
]

[package]
name = "proyecto_bd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.7.1", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["protobuf"] }
chrono = "0.4.31"
dhat = { version = "0.3.2", optional = true }
dotenv = "0.15.0"
prost = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }

[profile.rdbg]
inherits = "release"
debug = 1

[features]
dhat = ["dep:dhat"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false
